--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="theme-color" content="#1a1a2e">
 <meta name="mobile-web-app-capable" content="yes">
   <title>Bio Log</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.json?v=2">
   <link rel="apple-touch-icon" href="icon-192.png">
   <style>
     * {
